# ceres_ros_tutorial

./: CMakeLists.txt  README.md  package.xml
launch/: bundle_adjustment_rviz.launch  bundle_adjustment_rviz.rviz
src/: simple_ba_example.cpp
src/ceres/: PoseLocalParameterization.cpp  PoseLocalParameterization.h  RelativeLandmarkFactor.cpp  RelativeLandmarkFactor.h
src/utils/: SE3.cpp  SE3.h  SO3.cpp  SO3.h  Visualization.cpp  Visualization.h
