<?xml version="1.0"?>
<package>
  <!--Package Information-->
  <name>ceres_ros_tutorial</name>
  <version>0.0.0</version>
  <description>
  A few simple examples of how to use Ceres, using ROS for 3D visualization.
  </description>

  <!--Maintainer information-->
  <maintainer email="mitchell.cohen3@mail.mcgill.ca">Mitchell Cohen</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GNU General Public Liscenes v3.0</license>

  <!-- ROS Dependancies required to compile this package-->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>
 
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>